# NSAanbiedingen

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  STARTUP_PROGRESS.md  Tauri-Python App Ontwikkelplan.md  astro.config.mjs  dev.sh  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  verify_setup.sh
.github/workflows/: build.yml
backend/: backend.spec  requirements.txt
backend/hooks/: hook-pydantic.py  hook-weasyprint.py
backend/src/: __init__.py  models.py  pdf_generator.py  server.py  utils.py
backend/tests/: __init__.py  conftest.py  test_pdf_generation.py
scripts/: rename-sidecar.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: sidecar.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx
src/layouts/: Layout.astro
src/pages/: index.astro
src/stores/: backend.ts
src/styles/: global.css
